Checkin in for John Keiser <jkeiser@iname.com>.  Make checkboxes and radio buttons not fire onChange on pageload if they are checked by default.  Bug 112218, r=rods, sr=jst